 * Added CORE:: clarity to Platform::UNIX
 
2006-11-13 cjg
 * Fixed bug in Platform::Unix::getpwnam

2006-11-13 moj
 * Split up the intros for reject/remove with email - now have
    author_lang_pref, remove_form_intro, reject_form_intro
 * Added use for SavedSearch::Run (cjg)
 * Removed 'Not logged in' from login bar (cjg)
 * Switched sides for search/login (cjg)

2006-11-13 cjg
 * Made method in Session to render an input grid with hidden help.
 * Multi and Upload now use this
 * Toggles now blur when you click them
 * If only one component then internal buttons don't do the #t thing
 * Added help to document fields.
 * Redesigned subject component interface
 * Disabled degenerate mode for metafield input - always in a grid now.
 * Added styling to arrows and pos numbers in grid
 * Made headings in input grid a bit smaller
 * Renamed "Email (if known)" to "Email".
 * Renamed "More Spaces" to "More input rows"
 * Changed page width back to 720
 * More CSS styling.

2006-11-13 cjg
 * Added phrase for subject ancestors name

2006-11-13 cjg
 * Fixed a bug in error phrases in Upload

2006-11-13 moj
 * Added Light surround for file upload help
 * Added help phrase for upload
 * Added CC link to license help

2006-11-13 cjg
 * Added verbose option to import testdata
 * Removing all of a tree is now done via EPrints::Utils::rmtree which
    does not use File::Path.
 * Fixed bug in Auth - stopped you seeing documents.
 * Removed need for File::Path
 * Fixed bug that the eprint_fields file was utf-8 encoded rather than 
    latin-1

2006-11-13 cjg
 * Removed margins from the top and bottom of the upload help to save 
    vertical real estate.
 * Radio-button input for metafields can now have UNSPECIFIED if it's 
    neither multiple or required.
 * Date-type now uses radio-button-input
 * Set-input fields are now inside a grid table for consistent styling.
 * Multi field help now renders nicely if a field does not have help.